--- a/locale/sources/developer.pot
+++ b/locale/sources/developer.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo saas-15.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-12 05:05+0000\n"
+"POT-Creation-Date: 2023-10-09 12:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20314,7 +20314,7 @@ msgid "Creating safe content using :class:`~markupsafe.Markup`"
 msgstr ""
 
 #: ../../content/developer/reference/frontend/qweb.rst:378
-msgid "See the official documentation for explanations, but the big advantage of :class:`~markupsafe.Markup` is that it's a very rich type overrinding :class:`str` operations to *automatically escape parameters*."
+msgid "See the official documentation for explanations, but the big advantage of :class:`~markupsafe.Markup` is that it's a very rich type overriding :class:`str` operations to *automatically escape parameters*."
 msgstr ""
 
 #: ../../content/developer/reference/frontend/qweb.rst:382
