--- a/locale/sources/services.pot
+++ b/locale/sources/services.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-12 13:54+0000\n"
+"POT-Creation-Date: 2023-10-09 13:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1815,7 +1815,7 @@ msgid "Edit the :guilabel:`Chat Input Placeholder` to change the text that appea
 msgstr ""
 
 #: ../../content/applications/services/helpdesk/overview/receiving_tickets.rst:192
-msgid "Change the :guilabel:`Livechat Button Color` and and the :guilabel:`Channel Header Color` by clicking a color bubble to open the color selection window. Click the refresh icon to the right of the color bubbles to reset the colors to the default selection."
+msgid "Change the :guilabel:`Livechat Button Color` and the :guilabel:`Channel Header Color` by clicking a color bubble to open the color selection window. Click the refresh icon to the right of the color bubbles to reset the colors to the default selection."
 msgstr ""
 
 #: ../../content/applications/services/helpdesk/overview/receiving_tickets.rst:197
