[IMP] *: export translations
closes odoo/documentation#6217

X-original-commit: f3f023284774c3cf3837c3564848b0f80a6b3c51
Signed-off-by: Martin Trigaux (mat) <mat@odoo.com>

--- a/locale/sources/administration.pot
+++ b/locale/sources/administration.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo saas-15.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-09 12:00+0000\n"
+"POT-Creation-Date: 2023-10-26 13:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1396,11 +1396,11 @@ msgid "Create a new application"
 msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:24
-msgid "To get started, go to `Microsoft's Azure Portal <https://portal.azure.com/>`_. Log in with the :guilabel:`Microsoft Outlook Office 365` account if there is one, otherwise log in with the personal :guilabel:`Microsoft account`. A user with administrative access to the Azure Settings will need to connect and perform the following configuration. Next, navigate to the section labeled :guilabel:`Manage Azure Active Directory`."
+msgid "To get started, go to `Microsoft's Azure Portal <https://portal.azure.com/>`_. Log in with the :guilabel:`Microsoft Outlook Office 365` account if there is one, otherwise log in with the personal :guilabel:`Microsoft account`. A user with administrative access to the Azure Settings will need to connect and perform the following configuration. Next, navigate to the section labeled :guilabel:`Manage Microsoft Entra ID` (formally *Azure Active Directory*)."
 msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:30
-msgid "Now, click on :guilabel:`Add (+)`, located in the top menu, and then select :guilabel:`App registration`. On the :guilabel:`Register an application` screen, rename the :guilabel:`Name` to `Odoo` or something recognizable. Under the :guilabel:`Supported account types` section select :guilabel:`Accounts in any organizational directory (Any Azure AD directory - Multitenant) and personal Microsoft accounts (e.g. Skype, Xbox)`."
+msgid "Now, click on :guilabel:`Add (+)`, located in the top menu, and then select :guilabel:`App registration`. On the :guilabel:`Register an application` screen, rename the :guilabel:`Name` to `Odoo` or something recognizable. Under the :guilabel:`Supported account types` section select :guilabel:`Accounts in any organizational directory (Any Microsoft Entra ID directory - Multitenant) and personal Microsoft accounts (e.g. Skype, Xbox)`."
 msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:36
