--- a/locale/sources/marketing.pot
+++ b/locale/sources/marketing.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-09 13:19+0000\n"
+"POT-Creation-Date: 2023-10-27 08:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -965,7 +965,7 @@ msgid "Under :guilabel:`Note`, internal notes can be left (such as: to-do lists,
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:144
-msgid "Type `/` in either text field (:guilabel:`Note` or :guilabel:`Ticket instructions`) to reveal a sub-menu of :guilabel:`Structure` options. These options provide various formatting options to ensure vital internal information is organzied for event staff to review."
+msgid "Type `/` in either text field (:guilabel:`Note` or :guilabel:`Ticket instructions`) to reveal a sub-menu of :guilabel:`Structure` options. These options provide various formatting options to ensure vital internal information is organized for event staff to review."
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:-1
@@ -1029,7 +1029,7 @@ msgid "View of the drag and drop building blocks used to customize event invite 
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:212
-msgid "To build an email event invite from scratch, select the :guilabel:`Plain Text` template, and Odoo will provide a blank email canvas, which can be customized either by using the front-end rich text editor that accepts slash (`/`) commands, or the XML code editor when :ref:`developer mode <developer-mode>` is engaged and the :guilabel:`</>` icon is pressed."
+msgid "To build an email event invite from scratch, select the :guilabel:`Plain Text` template, and Odoo will provide a blank email canvas, which can be customized either by using the frontend rich text editor that accepts slash (`/`) commands, or the XML code editor when :ref:`developer mode <developer-mode>` is engaged and the :guilabel:`</>` icon is pressed."
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:218
@@ -1085,15 +1085,15 @@ msgid "Publish events"
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:268
-msgid "Until an event is published, it will remain hidden from public view on the website and registering for it will not be possible. To publish an event, navigate to it either from the back end of Odoo through the :guilabel:`Events` application, or access the hidden event page through the front end as either a priveliged user or administrator."
+msgid "Until an event is published, it will remain hidden from public view on the website and registering for it will not be possible. To publish an event, navigate to it either from the backend of Odoo through the :guilabel:`Events` application, or access the hidden event page through the frontend as either a priveliged user or administrator."
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:273
-msgid "If navigating from the back end, go to the event form, and click the :guilabel:`Go to Website` smart button to reach the event page on the website (on the front end). If starting from the front end, simply navigate to the event page that needs to be published."
+msgid "If navigating from the backend, go to the event form, and click the :guilabel:`Go to Website` smart button to reach the event page on the website (on the frontend). If starting from the frontend , simply navigate to the event page that needs to be published."
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:277
-msgid "No matter the route, an event page can only be published from the front end. In the upper right corner of the event page on the website, toggle the switch from the red :guilabel:`Unpublished` status to the green :guilabel:`Published` status. Doing so instantly makes the event page accessible to the public on the website."
+msgid "No matter the route, an event page can only be published from the frontend. In the upper right corner of the event page on the website, toggle the switch from the red :guilabel:`Unpublished` status to the green :guilabel:`Published` status. Doing so instantly makes the event page accessible to the public on the website."
 msgstr ""
 
 #: ../../content/applications/marketing/events/event_essentials.rst:-1
@@ -2298,7 +2298,7 @@ msgid "View of the mailing list page in the SMS marketing application."
 msgstr ""
 
 #: ../../content/applications/marketing/sms_marketing/essentials/sms_essentials.rst:71
-msgid "To reveal all the possible options in the :guilabel:`Recipients` field, click the field to see all the choices Odoo makes avaialble."
+msgid "To reveal all the possible options in the :guilabel:`Recipients` field, click the field to see all the choices Odoo makes available."
 msgstr ""
 
 #: ../../content/applications/marketing/sms_marketing/essentials/sms_essentials.rst:74
