--- a/locale/sources/contributing.pot
+++ b/locale/sources/contributing.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo saas-16.1\n"
+"Project-Id-Version: Odoo 17.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-14 05:10+0000\n"
+"POT-Creation-Date: 2023-11-08 08:46+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -286,16 +286,16 @@ msgid "Now that your environment is set up, you can start contributing to the co
 msgstr ""
 
 #: ../../content/contributing/development.rst:95
-msgid "Choose the version of Odoo to which you want to make changes. Keep in mind that contributions targeting an :doc:`unsupported version of Odoo </administration/maintain/supported_versions>` are not accepted. This guide assumes that the changes target Odoo 16.1, which corresponds to branch `saas-16.1`."
+msgid "Choose the version of Odoo to which you want to make changes. Keep in mind that contributions targeting an :doc:`unsupported version of Odoo </administration/maintain/supported_versions>` are not accepted. This guide assumes that the changes target Odoo 17, which corresponds to branch `17.0`."
 msgstr ""
 
 #: ../../content/contributing/development.rst:99
 #: ../../content/contributing/documentation.rst:216
-msgid "Create a new branch starting from branch saas-16.1. Prefix the branch name with the base branch: `saas-16.1-...`. If you work at Odoo, suffix the branch name with your Odoo handle: `saas-16.1-...-xyz`."
+msgid "Create a new branch starting from branch 17.0. Prefix the branch name with the base branch: `17.0-...`. If you work at Odoo, suffix the branch name with your Odoo handle: `17.0-...-xyz`."
 msgstr ""
 
 #: ../../content/contributing/development.rst:113
-msgid "`Sign the Odoo CLA <https://github.com/odoo/odoo/blob/saas-16.1/doc/cla/sign-cla.md>`_ if not already done. Skip this step if you work at Odoo."
+msgid "`Sign the Odoo CLA <https://github.com/odoo/odoo/blob/17.0/doc/cla/sign-cla.md>`_ if not already done. Skip this step if you work at Odoo."
 msgstr ""
 
 #: ../../content/contributing/development.rst:115
@@ -339,7 +339,7 @@ msgstr ""
 
 #: ../../content/contributing/development.rst:149
 #: ../../content/contributing/documentation.rst:278
-msgid "Select **saas-16.1** for the base."
+msgid "Select **17.0** for the base."
 msgstr ""
 
 #: ../../content/contributing/development.rst:150
@@ -1611,7 +1611,7 @@ msgid "Now that your environment is set up, you can start contributing to the do
 msgstr ""
 
 #: ../../content/contributing/documentation.rst:211
-msgid "Choose the version of the documentation to which you want to make changes. Keep in mind that contributions targeting an :doc:`unsupported version of Odoo </administration/maintain/supported_versions>` are not accepted. This guide assumes that the changes target the documentation of Odoo 16.1, which corresponds to branch `saas-16.1`."
+msgid "Choose the version of the documentation to which you want to make changes. Keep in mind that contributions targeting an :doc:`unsupported version of Odoo </administration/maintain/supported_versions>` are not accepted. This guide assumes that the changes target the documentation of Odoo 17, which corresponds to branch `17.0`."
 msgstr ""
 
 #: ../../content/contributing/documentation.rst:233
@@ -1619,7 +1619,7 @@ msgid "Compress all PNG images that you added or modified."
 msgstr ""
 
 #: ../../content/contributing/documentation.rst:240
-msgid "Write a `redirect rule <https://github.com/odoo/documentation/tree/saas-16.1/redirects/MANUAL.md>`_ for every RST file that your renamed."
+msgid "Write a `redirect rule <https://github.com/odoo/documentation/tree/17.0/redirects/MANUAL.md>`_ for every RST file that your renamed."
 msgstr ""
 
 #: ../../content/contributing/documentation.rst:243
@@ -2882,11 +2882,11 @@ msgid "Absolute:"
 msgstr ""
 
 #: ../../content/contributing/documentation/rst_guidelines.rst:39
-msgid "``https://odoo.com/documentation/saas-16.1/applications/sales/sales/products_prices/prices.html``"
+msgid "``https://odoo.com/documentation/17.0/applications/sales/sales/products_prices/prices.html``"
 msgstr ""
 
 #: ../../content/contributing/documentation/rst_guidelines.rst:40
-msgid "``https://odoo.com/documentation/saas-16.1/applications/sales/sales/products_prices/products/variants.html``"
+msgid "``https://odoo.com/documentation/17.0/applications/sales/sales/products_prices/products/variants.html``"
 msgstr ""
 
 #: ../../content/contributing/documentation/rst_guidelines.rst:42
