--- a/locale/sources/legal.pot
+++ b/locale/sources/legal.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo saas-16.1\n"
+"Project-Id-Version: Odoo 17.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-10 06:13+0000\n"
+"POT-Creation-Date: 2023-11-08 08:46+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgid "In order to contribute to any of the Odoo projects, companies and individ
 msgstr ""
 
 #: ../../content/legal/cla.rst:10
-msgid "More information about this requirement, the procedure to sign the agreement, and a FAQ can be found on our `GitHub project page <https://github.com/odoo/odoo/blob/saas-16.1/doc/cla/sign-cla.md>`_."
+msgid "More information about this requirement, the procedure to sign the agreement, and a FAQ can be found on our `GitHub project page <https://github.com/odoo/odoo/blob/17.0/doc/cla/sign-cla.md>`_."
 msgstr ""
 
 #: ../../content/legal/coc.rst:7
@@ -268,7 +268,7 @@ msgid "Odoo Enterprise Subscription Agreement"
 msgstr ""
 
 #: ../../content/legal/terms/enterprise.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/enterprise.rst:11
@@ -907,7 +907,7 @@ msgid "Odoo Enterprise Abonnementsvertrag"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_de.rst:10
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement_de.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement_de.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_de.rst:12
@@ -1484,7 +1484,7 @@ msgid "Acuerdo de suscripción de Odoo Enterprise"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_es.rst:10
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement_es.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement_es.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_es.rst:12
@@ -2072,7 +2072,7 @@ msgid "Odoo Enterprise Subscription Agreement (FR)"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_fr.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement_fr.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement_fr.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_fr.rst:11
@@ -2694,7 +2694,7 @@ msgid "Odoo Enterprise Subscription Agreement (NL)"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_nl.rst:10
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement_nl.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement_nl.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_nl.rst:12
@@ -3262,7 +3262,7 @@ msgid "Odoo Enterprise Subscription Agreement (PT)"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_pt_BR.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_enterprise_agreement_pt_BR.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_enterprise_agreement_pt_BR.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/enterprise_pt_BR.rst:11
@@ -3874,7 +3874,7 @@ msgid "Odoo Partnership Agreement (ES)"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/partnership_es.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_partnership_agreement_es.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_partnership_agreement_es.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/partnership_es.rst:11
@@ -4469,7 +4469,7 @@ msgid "Odoo Partnership Agreement (FR)"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/partnership_fr.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/odoo_partnership_agreement_fr.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/odoo_partnership_agreement_fr.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/partnership_fr.rst:11
@@ -4955,7 +4955,7 @@ msgid "Allgemeine Verkaufsbedingungen"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_de.rst:9
-msgid "`PDF herunterladen <https://www.odoo.com/documentation/saas-16.1/terms_of_sale_de.pdf>`_"
+msgid "`PDF herunterladen <https://www.odoo.com/documentation/17.0/terms_of_sale_de.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_de.rst:11
@@ -5019,7 +5019,7 @@ msgid "Términos Generales de Venta"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_es.rst:9
-msgid "`Descargar PDF <https://www.odoo.com/documentation/saas-16.1/terms_of_sale_es.pdf>`_"
+msgid "`Descargar PDF <https://www.odoo.com/documentation/17.0/terms_of_sale_es.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_es.rst:11
@@ -5083,7 +5083,7 @@ msgid "Conditions Générales de Vente"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_fr.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/terms_of_sale_fr.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/terms_of_sale_fr.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/i18n/terms_of_sale_fr.rst:11
@@ -5619,7 +5619,7 @@ msgid "General Terms of Sale"
 msgstr ""
 
 #: ../../content/legal/terms/terms_of_sale.rst:9
-msgid "`Download PDF <https://www.odoo.com/documentation/saas-16.1/terms_of_sale.pdf>`_"
+msgid "`Download PDF <https://www.odoo.com/documentation/17.0/terms_of_sale.pdf>`_"
 msgstr ""
 
 #: ../../content/legal/terms/terms_of_sale.rst:11
