[FIX] dev/reference: Fix external reference
The tour utils were red and moved in Odoo (odoo/odoo#107618).

closes odoo/documentation#6496

Signed-off-by: Antoine Vandevenne (anv) <anv@odoo.com>

--- a/locale/sources/developer.pot
+++ b/locale/sources/developer.pot
@@ -10395,7 +10395,7 @@ msgid "Add any step you want."
 msgstr ""
 
 #: ../../content/developer/reference/backend/testing.rst:599
-msgid "Every step contains at least a trigger. You can either use the `predefined steps <https://github.com/odoo/odoo/blob/saas-16.1/addons/web_tour/static/src/js/tour_step_utils.js>`_ or write your own personalized step."
+msgid "Every step contains at least a trigger. You can either use the `predefined steps <https://github.com/odoo/odoo/blob/saas-16.3/addons/web_tour/static/src/tour_service/tour_utils.js#L426>`_ or write your own personalized step."
 msgstr ""
 
 #: ../../content/developer/reference/backend/testing.rst:603
