--- a/locale/sources/developer.pot
+++ b/locale/sources/developer.pot
@@ -9756,7 +9756,7 @@ msgid "Add any step you want."
 msgstr ""
 
 #: ../../content/developer/reference/backend/testing.rst:599
-msgid "Every step contains at least a trigger. You can either use the `predefined steps <https://github.com/odoo/odoo/blob/17.0/addons/web_tour/static/src/js/tour_step_utils.js>`_ or write your own personalized step."
+msgid "Every step contains at least a trigger. You can either use the `predefined steps <https://github.com/odoo/odoo/blob/17.0/addons/web_tour/static/src/tour_service/tour_utils.js#L426>`_ or write your own personalized step."
 msgstr ""
 
 #: ../../content/developer/reference/backend/testing.rst:603
