Correct typo: Deregulated Permissions to Delegated Permissions

--- a/locale/ar/LC_MESSAGES/administration.po
+++ b/locale/ar/LC_MESSAGES/administration.po
@@ -2165,7 +2165,7 @@ msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:55
 msgid ""
-"In the search bar, search for the following :guilabel:`Deregulated "
+"In the search bar, search for the following :guilabel:`Delegated "
 "permissions` and click :guilabel:`Add permissions` for each one:"
 msgstr ""
 
