--- a/locale/es/LC_MESSAGES/administration.po
+++ b/locale/es/LC_MESSAGES/administration.po
@@ -2940,10 +2940,10 @@ msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:55
 msgid ""
-"In the search bar, search for the following :guilabel:`Deregulated "
+"In the search bar, search for the following :guilabel:`Delegated "
 "permissions` and click :guilabel:`Add permissions` for each one:"
 msgstr ""
-"En la barra de búsqueda, busque :guilabel:`Deregulated permissions` "
+"En la barra de búsqueda, busque :guilabel:`Delegated Permissions` "
 "(permisos no regulados) y haga clic en :guilabel:`Add permissions` (agregar "
 "permisos) para cada uno:"
 
