--- a/locale/ro/LC_MESSAGES/administration.po
+++ b/locale/ro/LC_MESSAGES/administration.po
@@ -2528,10 +2528,10 @@ msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:55
 msgid ""
-"In the search bar, search for the following :guilabel:`Deregulated "
+"In the search bar, search for the following :guilabel:`Delegated "
 "permissions` and click :guilabel:`Add permissions` for each one:"
 msgstr ""
-"În bara de căutare, căutați următoarele :guilabel:`Deregulated permissions` "
+"În bara de căutare, căutați următoarele :guilabel:`Delegated Permissions` "
 "și faceți clic pe :guilabel:`Add permissions` pentru fiecare dintre ele:"
 
 #: ../../content/administration/maintain/azure_oauth.rst:58
