--- a/locale/sources/administration.pot
+++ b/locale/sources/administration.pot
@@ -1481,7 +1481,7 @@ msgid "The :guilabel:`API permissions` should be set next. Odoo will need specif
 msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:55
-msgid "In the search bar, search for the following :guilabel:`Deregulated permissions` and click :guilabel:`Add permissions` for each one:"
+msgid "In the search bar, search for the following :guilabel:`Delegated Permissions` and click :guilabel:`Add permissions` for each one:"
 msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:58
