--- a/locale/de/LC_MESSAGES/administration.po
+++ b/locale/de/LC_MESSAGES/administration.po
@@ -2967,7 +2967,7 @@ msgstr ""
 
 #: ../../content/administration/maintain/azure_oauth.rst:55
 msgid ""
-"In the search bar, search for the following :guilabel:`Deregulated "
+"In the search bar, search for the following :guilabel:`Delegated "
 "permissions` and click :guilabel:`Add permissions` for each one:"
 msgstr ""
 "Suchen Sie in der Suchleiste nach den folgenden :guilabel:`Deregulierte "
