--- a/locale/sources/services.pot
+++ b/locale/sources/services.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo 17.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-30 14:44+0000\n"
+"POT-Creation-Date: 2023-12-21 13:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,7 +51,7 @@ msgid "Configuration"
 msgstr ""
 
 #: ../../content/applications/services/field_service/default_warehouse.rst:18
-msgid "To set up a user default warehouse, the :doc:`storage locations <../../inventory_and_mrp/inventory/management/warehouses/warehouses_locations>` feature needs to be activated in the **Inventory** app. It is also necessary to have more than one warehouse in your database."
+msgid "To set up a user default warehouse, the :doc:`storage locations </applications/inventory_and_mrp/inventory/warehouses_storage/inventory_management/warehouses_locations>` feature needs to be activated in the **Inventory** app. It is also necessary to have more than one warehouse in your database."
 msgstr ""
 
 #: ../../content/applications/services/field_service/default_warehouse.rst:23
@@ -59,7 +59,7 @@ msgid "You can either set it up :ref:`for your profile <default-warehouse/my-pro
 msgstr ""
 
 #: ../../content/applications/services/field_service/default_warehouse.rst:27
-msgid ":doc:`../../inventory_and_mrp/inventory/management/warehouses/warehouses_locations`"
+msgid ":doc:`/applications/inventory_and_mrp/inventory/warehouses_storage/inventory_management/warehouses_locations`"
 msgstr ""
 
 #: ../../content/applications/services/field_service/default_warehouse.rst:32
@@ -875,7 +875,7 @@ msgid "When the necessary information has been entered, click :guilabel:`Create 
 msgstr ""
 
 #: ../../content/applications/services/helpdesk/advanced/track_and_bill.rst:248
-msgid ":doc:`/applications/inventory_and_mrp/inventory/management/products/uom`"
+msgid ":doc:`/applications/inventory_and_mrp/inventory/product_management/product_replenishment/uom`"
 msgstr ""
 
 #: ../../content/applications/services/helpdesk/overview.rst:5
