--- a/locale/sources/general.pot
+++ b/locale/sources/general.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-26 06:37+0000\n"
+"POT-Creation-Date: 2023-12-18 20:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2649,7 +2649,7 @@ msgid "In-App Purchase (IAP)"
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:5
-msgid "In-App Purchases (IAP) gives access to additional services through Odoo. For instance, it allows you to send SMS Text Messages or to send Invoices by post directly from my database."
+msgid "In-App Purchases (IAP) gives access to additional services through Odoo. For instance, it allows you to send SMS Text Messages or to send Invoices by post directly from your database."
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:9
@@ -2657,11 +2657,11 @@ msgid "Buying Credits"
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:11
-msgid "Each IAP Service relies on prepaid credits to work and has its own pricing. To consult my current balance or to recharge my account, go to :menuselection:`Settings --> Odoo IAP --> View my Services`."
+msgid "Each IAP Service relies on prepaid credits to work and has its own pricing. To consult your current balance or to recharge your account, go to :menuselection:`Settings --> Odoo IAP --> View my Services`."
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:19
-msgid "If I am on Odoo Online and have the Enterprise version, I benefit from free credits to test our IAP features."
+msgid "If you are on Odoo Online and have the Enterprise version, you benefit from free credits to test our IAP features."
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:23
@@ -2681,7 +2681,7 @@ msgid "IAP Portal"
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:40
-msgid "The IAP Portal is a platform regrouping my IAP Services. It is accessible from :menuselection:`Settings app --> Odoo IAP --> View my Services`. From there, I can view my current balance, recharge my credits, review my consumption and set a reminder to when credits are low."
+msgid "The IAP Portal is a platform regrouping your IAP Services. It is accessible from :menuselection:`Settings app --> Odoo IAP --> View my Services`. From there, you can view your current balance, recharge your credits and set a reminder when your balance falls below a threshold."
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:48
@@ -2689,31 +2689,7 @@ msgid "Get notified when credits are low"
 msgstr ""
 
 #: ../../content/applications/general/in_app_purchase.rst:50
-msgid "To be notified when it’s time to recharge my credits, I’ll go to my IAP Portal through :menuselection:`Settings app --> Odoo IAP --> View my Services`, unfold a service and mark the Receive threshold warning option. Then, I’ll provide a minimum amount of credits and email addresses. Now, every time that the limit is reached, an automatic reminder will be sent to by email!"
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:60
-msgid "IAP services available"
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:62
-msgid "Different services are available depending on the hosting type of your Database:"
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:64
-msgid "*Odoo Online*: only the IAP services provided by Odoo can be used (i.e. the SMS, Snailmail, Reveal and Partner Autocomplete features);"
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:66
-msgid "*Odoo.sh and Odoo Enterprise (on-premise)*: both the services provided by Odoo and by third-party apps can be used."
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:70
-msgid "Offering my own services"
-msgstr ""
-
-#: ../../content/applications/general/in_app_purchase.rst:72
-msgid "I am more than welcome to offer my own IAP services through Odoo Apps! It is the perfect opportunity to get recurring revenue for an ongoing service use rather than — and possibly instead of — a sole initial purchase. Please, find more information at: :doc:`/developer/howtos/provide_iap_services`."
+msgid "To be notified when it’s time to recharge your credits, you can go to your IAP Portal through :menuselection:`Settings app --> Odoo IAP --> View my Services`, unfold a service and check the Receive threshold warning option. Then, you can provide a minimum amount of credits and email addresses. Now, every time that the limit is reached, an automatic reminder will be sent by email!"
 msgstr ""
 
 #: ../../content/applications/general/users.rst:5
