--- a/locale/sources/services.pot
+++ b/locale/sources/services.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo saas-16.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-19 13:26+0000\n"
+"POT-Creation-Date: 2024-01-19 10:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2537,7 +2537,7 @@ msgid "Project settings"
 msgstr ""
 
 #: ../../content/applications/services/project/project_management.rst:58
-msgid "`Odoo Tutorials: Customize your project <https://www.odoo.com/slides/slide/customize-your-project-1662?fullscreen=1>`_"
+msgid "`Odoo Tutorials: Customize projects <https://www.odoo.com/slides/slide/customize-projects-3615?fullscreen=1>`_"
 msgstr ""
 
 #: ../../content/applications/services/project/project_management.rst:61
