--- a/locale/sources/developer.pot
+++ b/locale/sources/developer.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo saas-15.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-19 06:54+0000\n"
+"POT-Creation-Date: 2024-03-05 16:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25439,7 +25439,7 @@ msgid "the customer who bought the property"
 msgstr ""
 
 #: ../../content/developer/tutorials/getting_started/08_relations.rst:16
-msgid "the real restate agent who sold the property"
+msgid "the real estate agent who sold the property"
 msgstr ""
 
 #: ../../content/developer/tutorials/getting_started/08_relations.rst:17
