--- a/locale/es/LC_MESSAGES/administration.po
+++ b/locale/es/LC_MESSAGES/administration.po
@@ -11391,7 +11391,7 @@ msgid ""
 "The documentation will help you go live with your Odoo.sh project in no "
 "time."
 msgstr ""
-"La documentación le ayduará a lanzar su proyecto de Odoo.sh rápidamente. "
+"La documentación le ayudará a lanzar su proyecto de Odoo.sh rápidamente. "
 
 #: ../../content/administration/upgrade.rst:7
 msgid ""
